Добавление рабочих тестов
необходимо залить уроки, написать код для кнопки в Tesing.java для
выхода из теста.

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -22,7 +22,6 @@
         <activity
             android:name=".Start"
             android:label="@string/title_activity_start"
-            android:noHistory="true"
             android:theme="@style/AppTheme.NoActionBar" />
         <activity
             android:name=".Book"
@@ -50,7 +49,7 @@
             android:noHistory="true"
             android:theme="@style/AppTheme.NoActionBar" />
         <activity
-            android:name=".Test"
+            android:name=".Testing"
             android:label="Тест"
             android:noHistory="true"/>
     </application>
